--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Expense Tracker website created using create-react-app"
     />
     <!--favicon -->
     <link
-      rel="apple-touch-icon-precomposed"
+      rel="apple-touch-icon"
       sizes="152x152"
       href="apple-touch-icon-152x152.png"
     />
